# Text2SQL

./: .gitignore  Justfile  README.md  docker-compose.yml
scripts/: db_migrate.sql  db_reset.sql  db_seed.sql  lessons.sql  migrate.sql  seed_migrate.sql  seed_pg.sql  user_schema.sql
services/api/: .dockerignore  Dockerfile  pyproject.toml
services/api/app/: config.py  dependencies.py  main.py
services/api/app/clients/: llm_compat.py  ollama.py  postgres.py  qdrant.py
services/api/app/nlu/: classify.py
services/api/app/routes/: ask.py  health.py  index.py  lessons.py  schema.py  search.py  semantic.py  test.py  text2sql.py
services/api/app/schemas/: common.py
services/api/app/semantic/: coverage.py  intent_gate_embed.py  lessons.py  loader.py  provider.py  repair.py  schema_cache.py  schema_introspect.py  semantic.yaml  sql_guard.py  training.py  trainning.py
services/api/app/services/: chunks.py  db_exec.py  embeddings.py  generation.py  logger.py  retrieval.py  text2sql.py
services/api/app/utils/: qdrant_helper.py  record_helper.py  sql_text.py
services/ui/: index.html  nginx.conf
services/ui/assets/css/: app.css
services/ui/assets/js/: app.js
